@@ -62,7 +62,7 @@ module Fairy
 CONF.FILEBUFFEREDQUEUE_THRESHOLD = 100000/2
 
 ##CONF.SORTEDQUEUE_THRESHOLD = 10000/2
-#CONF.SORTEDQUEUE_THRESHOLD = 100000/2
+CONF.SORTEDQUEUE_THRESHOLD = 100000/2
 #CONF.SORTEDQUEUE_THRESHOLD = 1000
 ##CONF.SORTEDQUEUE_SORTBY = proc{|v| v}
 
